--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,3 +1,38 @@
+@import url("https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation:wght@400;500;600&family=Fasthand&family=Nunito:wght@200;300;400;500;600;700;800;900&display=swap");
+
+.nunito-200 {
+  font-family: "Nunito", sans-serif;
+  font-weight: 200;
+}
+.nunito-300 {
+  font-family: "Nunito", sans-serif;
+  font-weight: 300;
+}
+.nunito-900 {
+  font-family: "Nunito", sans-serif;
+  font-weight: 900;
+}
+.nunito-400 {
+  font-family: "Nunito", sans-serif;
+  font-weight: 400;
+}
+.nunito-500 {
+  font-family: "Nunito", sans-serif;
+  font-weight: 500;
+}
+.nunito-600 {
+  font-family: "Nunito", sans-serif;
+  font-weight: 600;
+}
+.nunito-700 {
+  font-family: "Nunito", sans-serif;
+  font-weight: 700;
+}
+.nunito-800 {
+  font-family: "Nunito", sans-serif;
+  font-weight: 800;
+}
+
 .App {
   text-align: center;
 }
@@ -5,6 +40,12 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+* {
+  word-wrap: break-word;
+  font-family: "Nunito", sans-serif;
+  text-decoration: none !important;
+  font-weight: 400;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -35,4 +76,20 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.parent:hover .child {
+  display: flex;
+}
+
+.modal-content {
+  border: none !important;
+}
+
+select {
+  border: 1px solid gray;
+  padding: 5px 10px;
+  border-radius: 5px;
+  width: 100%;
+  margin-bottom: 10px !important;
 }
