--- a/src/style/login.scss
+++ b/src/style/login.scss
@@ -192,7 +192,7 @@
   text-align: center;
 }
 
-input {
+.login input {
   width: 100%;
   margin-bottom: 10px;
   background: rgba(0, 0, 0, 0.3);
@@ -212,7 +212,7 @@ input {
   -ms-transition: box-shadow 0.5s ease;
   transition: box-shadow 0.5s ease;
 }
-input:focus {
+.login input:focus {
   box-shadow: inset 0 -5px 45px rgba(100, 100, 100, 0.4),
     0 1px 1px rgba(255, 255, 255, 0.2);
 }
