--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -205,6 +205,9 @@ h1,
 .dashboard-nav button {
   color: #fff;
 }
+.scale-cus:hover {
+  // transform: scale(1.01);
+}
 
 .brand-logo {
   font-family: "Nunito", sans-serif;
