--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -388,7 +388,7 @@ h1,
 
 .dashboard-toolbar {
   min-height: 64px;
-  background-color: #dfdfdf;
+  background-color: #443ea2;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
