--- a/src/style/login.scss
+++ b/src/style/login.scss
@@ -121,7 +121,7 @@
   width: 100vw;
   height: 100vh;
   font-family: "Open Sans", sans-serif;
-  background: #092756;
+  background: #443ea2;
 }
 .login {
   position: absolute;
