--- a/src/style/login.scss
+++ b/src/style/login.scss
@@ -162,3 +162,94 @@
   box-shadow: inset 0 -5px 45px rgba(100, 100, 100, 0.4),
     0 1px 1px rgba(255, 255, 255, 0.2);
 }
+
+.about-us {
+  font-family: "Nunito", sans-serif !important;
+  .contact {
+    padding: 65px 0;
+  }
+
+  .contact .heading h2 {
+    font-size: 30px;
+    font-family: "Nunito", sans-serif !important;
+    font-weight: 700;
+    margin: 0;
+    padding: 0;
+  }
+
+  .contact .heading h2 span {
+    color: red;
+    font-family: "Nunito", sans-serif !important;
+  }
+
+  .contact .heading p {
+    font-family: "Nunito", sans-serif !important;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 1.7;
+    color: #999999;
+    margin: 20px 0 60px;
+    padding: 0;
+  }
+
+  .contact .form-control {
+    font-family: "Nunito", sans-serif !important;
+    padding: 25px;
+    font-size: 14px;
+    margin-bottom: 10px;
+    background: #f9f9f9;
+    border: 0;
+    border-radius: 10px;
+  }
+
+  .contact button.btn {
+    padding: 10px;
+    font-family: "Nunito", sans-serif !important;
+    border-radius: 10px;
+    font-size: 15px;
+    background: red;
+    color: #ffffff;
+  }
+
+  .contact .title h3 {
+    font-size: 18px;
+    font-family: "Nunito", sans-serif !important;
+    font-weight: 600;
+  }
+
+  .contact .title p {
+    font-size: 14px;
+    font-weight: 400;
+    color: #999;
+    line-height: 1.6;
+    font-family: "Nunito", sans-serif !important;
+    margin: 0 0 40px;
+  }
+
+  .contact .content .info {
+    margin-top: 30px;
+    font-family: "Nunito", sans-serif !important;
+  }
+  .contact .content .info i {
+    font-size: 30px;
+    padding: 0;
+    margin: 0;
+    color: #02434b;
+    margin-right: 20px;
+    text-align: center;
+    width: 20px;
+    font-family: "Nunito", sans-serif !important;
+  }
+  .contact .content .info h4 {
+    font-size: 13px;
+    line-height: 1.4;
+    font-family: "Nunito", sans-serif !important;
+  }
+
+  .contact .content .info h4 span {
+    font-size: 13px;
+    font-weight: 300;
+    color: #999999;
+    font-family: "Nunito", sans-serif !important;
+  }
+}
